Fixing dark mode on videos page

--- a/_assets/css/savjee.videos.scss
+++ b/_assets/css/savjee.videos.scss
@@ -168,4 +168,15 @@
     .videoNavigation{
         background-color: $headerBackgroundDarkMode;
     }
+
+    .latest-videos{
+        .card {
+            background-color: #323232;
+            color: #fff;
+
+            a{
+                color: #fff;
+            }
+        }
+    }
 }
